--- a/README
+++ b/README
@@ -36,4 +36,4 @@ Você pode conferir o design da interface no [link do Figma](https://www.figma.c
 
 O projeto está disponível em [Clone-Kreativ no Vercel](https://clone-kreativ-npo2x9bcg-lucasmiguel2003.vercel.app/) para visualização.
 
-Seja bem-vindo ao Clone-Kreativ, e sinta-se à vontade para contribuir ou entrar em contato conosco!
+Seja bem-vindo ao Clone-Kreativ, e sinta-se à vontade para contribuir ou entrar em contato conosco!!
