--- a/README
+++ b/README
@@ -29,7 +29,7 @@ Você pode conferir o design da interface no [link do Figma](https://www.figma.c
 
 ## Preview
 
-![kreativ](https://lucasmiguel2003.github.io/Clone-Sistok/)
+![kreativ](https://lucasmiguel2003.github.io/Clone-Kreativ/)
 
 
 ## Deploy
