--- a/README
+++ b/README
@@ -29,7 +29,8 @@ Você pode conferir o design da interface no [link do Figma](https://www.figma.c
 
 ## Preview
 
-![kreativ](https://lucasmiguel2003.github.io/Clone-Kreativ/)
+![foto-kreativ2](https://github.com/LucasMiguel2003/Clone-Kreativ/assets/127208684/2b0e6b30-b08c-4d16-8d9a-3f94d8c01068)
+
 
 
 ## Deploy
